WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238520
[Playstation] Fix build break after
r292041
when ENABLE_SERVICE_WORKER is off
https://bugs.webkit.org/show_bug.cgi?id=238520
Summary
[Playstation] Fix build break after r292041 when ENABLE_SERVICE_WORKER is off
Jigen Zhou
Reported
2022-03-29 13:38:55 PDT
There was 2 additional build errors occur after
r292041
(the fix to
r291979
) ( if NOTIFICATIONS is also off: C:\Working\neko_dir\neko-ps\Source\WebKit\WebProcess/Notifications/WebNotificationManager.cpp(153,93): error : member access into incomplete type 'WebCore::Notif ication' [C:\Working\neko_dir\neko-ps\WebKitBuild\Debug-PS5\Source\WebKit\WebKit.vcxproj] LOG(Notifications, "WebProcess %i going to show notification %s", getpid(), notification.identifier().toString().utf8().data()); ^ C:\Working\neko_dir\neko-ps\WebKitBuild\Debug-PS5\WebCore\PrivateHeaders\WebCore/NotificationClient.h(39,7): note: forward declaration of 'WebCore::Notificatio n' class Notification; ^ 1 error generated. :\Working\neko_dir\neko-ps\Source\WebKit\UIProcess/WebsiteData/WebsiteDataStore.cpp(2114,18): error : no member named 'setServiceWorkerOpenWindowCompletionCallb ack' in 'WebKit::WebPageProxy' [C:\Working\neko_dir\neko-ps\WebKitBuild\Debug-PS5\Source\WebKit\WebKit.vcxproj] newPage->setServiceWorkerOpenWindowCompletionCallback(WTFMove(innerCallback)); ~~~~~~~ ^ 1 error generated.
Attachments
Patch
(1.33 KB, patch)
2022-03-29 14:29 PDT
,
Jigen Zhou
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jigen Zhou
Comment 1
2022-03-29 13:54:06 PDT
The error for NOTIFICATIONS has been fixed by
r291994
.
Jigen Zhou
Comment 2
2022-03-29 14:29:52 PDT
Created
attachment 456059
[details]
Patch
Darin Adler
Comment 3
2022-03-29 16:03:35 PDT
Comment on
attachment 456059
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=456059&action=review
> Source/WebKit/ChangeLog:3 > + [Playstation] Fix build break after
r292041
when ENABLE_SERVICE_WORKER is off
This bug name does not need a platform prefix, and should not have one.
EWS
Comment 4
2022-03-29 16:59:34 PDT
Committed
r292081
(
249008@main
): <
https://commits.webkit.org/249008@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 456059
[details]
.
Radar WebKit Bug Importer
Comment 5
2022-03-29 17:00:17 PDT
<
rdar://problem/91013132
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug