[Playstation] Fix build break after r292041 when ENABLE_SERVICE_WORKER is off https://bugs.webkit.org/show_bug.cgi?id=238520

Patch by Jigen Zhou <jigen.zhou@sony.com> on 2022-03-29
Reviewed by Darin Adler.

Unreviewed build fix after r292041 / r291979 for Playsation platform builds.

* UIProcess/WebsiteData/WebsiteDataStore.cpp:


Canonical link: https://commits.webkit.org/249008@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292081 268f45cc-cd09-0410-ab3c-d52691b4dbfc